syntax = "proto3";

package proto;


message HelloRequest {
  string request = 1;
}

message HelloResponse {
  string response = 1;
}


service HelloService {
  //一个简单的rpc
  rpc HelloWorld(HelloRequest) returns (HelloResponse){}
  //一个服务器端流式rpc
  rpc HelloWorldServerStream(HelloRequest) returns (stream HelloResponse){}
  //一个客户端流式rpc
  rpc HelloWorldClientStream(stream HelloRequest) returns (HelloResponse){}
  //一个客户端和服务器端双向流式rpc
  rpc HelloWorldClientAndServerStream(stream HelloRequest) returns (stream  HelloResponse){}
}